--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,7 +30,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 21
@@ -43,9 +43,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.braintreepayments.api:drop-in:4.5.0'
+    implementation 'com.braintreepayments.api:drop-in:5.2.1'
     implementation 'com.braintreepayments.api:data:1.7.10'
     implementation 'io.card:android-sdk:5.+'
     implementation 'com.google.android.gms:play-services-wallet:18.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
